<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytxt_dw_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        >

        <EditText
            android:id="@+id/txtdni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Vdni"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytxt_dw_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lytxt_dw_dni"
        >

        <EditText
            android:id="@+id/txtnom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Vnombres"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytxt_dw_apepaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lytxt_dw_nombres"
        >

        <EditText
            android:id="@+id/txtapepat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Vapellido_pat"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytxt_dw_apematerno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lytxt_dw_apepaterno"
        >

        <EditText
            android:id="@+id/txtapemat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Vapellido_mat"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/r_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytxt_dw_apematerno"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Vsexo"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Vsexo_M"
            android:layout_marginTop="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Vsexo_F"
            android:layout_marginTop="8dp"
            />


    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r_sexo"
        android:theme="@style/AppTheme.ButtonPrimary"
        android:text="@string/btn_regPer"/>




</RelativeLayout>
