<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_dnif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vdni"
                android:editable="false"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_dnif"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vdatos"
                android:editable="false"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_asuntof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_datos"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vasunto"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_areaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_asuntof"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Varea"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_areaf"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vfecha"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_fecha"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vautorizado"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Vgrabarvisita"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/lydwtxt_hora"
            android:theme="@style/AppTheme.ButtonPrimary"/>


    </RelativeLayout>

</FrameLayout>
