<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

    <include layout="@layout/toolbar" />

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_dnif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            >

            <EditText
                android:id="@+id/txt_dnif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vdni"
                android:editable="false" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_dnif"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/txt_datos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vdatos"
                android:editable="false"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lydwtxt_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lydwtxt_datos"
                android:layout_marginTop="8dp"
                >

                <EditText
                    android:id="@+id/txtfecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_Vfecha"
                    android:editable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lydwtxt_areaf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lydwtxt_fecha"
                android:layout_marginTop="8dp"
                >

                <EditText
                    android:id="@+id/txtarea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_Varea"/>

            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_asuntof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_areaf"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/txtasunto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vasunto"/>

        </android.support.design.widget.TextInputLayout>





        <android.support.design.widget.TextInputLayout
            android:id="@+id/lydwtxt_autorizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lydwtxt_asuntof"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/txtautorizado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_Vautorizado"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_VswitchS"
                android:layout_below="@+id/lydwtxt_autorizado"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:textColor="@color/color_secondary_text"
                android:thumb="@drawable/switch_compat_custom"
                app:track="@drawable/switch_compat_custom_track"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Vgrabarvisita"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/tipo"
            android:theme="@style/AppTheme.ButtonPrimary"/>


        </RelativeLayout>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
</LinearLayout>

</android.support.design.widget.CoordinatorLayout>