<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/scrollable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txtdni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/txt_Vdni" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_dni"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txtnom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_Vnombres" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_apepaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_nombres"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txtapepat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_Vapellido_pat" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_apematerno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_apepaterno"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txtapemat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_Vapellido_mat" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_apematerno"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/txt_sexo"
                    android:textColor="@color/color_secondary_text"
                    android:textSize="18dp"
                    android:thumb="@drawable/switch_compat_custom"
                    app:track="@drawable/switch_compat_custom_track" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tipo"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txtcorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_correo" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytxt_dw_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_correo"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/txttelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_telefono" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_regPersona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytxt_dw_telefono"
                    android:layout_marginTop="8dp"
                    android:text="@string/btn_regPer"
                    android:theme="@style/AppTheme.ButtonPrimary" />

            </RelativeLayout>
        </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>