<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lydwtxt_dnif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/txt_dni"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:hint="@string/txt_Vdni" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lydwtxt_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lydwtxt_dnif"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txt_datospersonales"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:hint="@string/txt_Vdatos" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lydwtxt_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lydwtxt_datos"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txt_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:hint="@string/txt_Vtelefono"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lydwtxt_telefono"
                android:layout_marginTop="8dp"
                android:text="@string/txt_Vgrabarlistanegra"
                android:theme="@style/AppTheme.ButtonPrimary" />
        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>